Add eslint config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests/**.test.js"
+    "test": "mocha tests/**.test.js",
+    "lint": "eslint ."
   },
   "author": "Florian Loch (florian.loch@gmail.com)",
   "license": "UNLICENSED",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.17.1",
     "mocha": "^3.2.0"
   }
 }
