--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha tests/**.test.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "node index.js"
   },
   "author": "Florian Loch (florian.loch@gmail.com)",
   "license": "UNLICENSED",
   "dependencies": {
     "applescript": "^1.0.0",
+    "co": "^4.6.0",
+    "colors": "^1.1.2",
     "koa": "^2.1.0",
     "koa-logger": "^2.0.1",
     "koa-router": "^5.4.0"
