--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "applescript": "^1.0.0",
     "co": "^4.6.0",
     "colors": "^1.1.2",
+    "crypto-js": "^3.1.9-1",
     "koa": "^2.1.0",
     "koa-logger": "^2.0.1",
     "koa-router": "^5.4.0"
